--- a/pong.css
+++ b/pong.css
@@ -39,12 +39,9 @@ background-color: lightgreen;
 
 #ball {
   position: absolute;
-  background-image: url("./img/basketball.gif");
   height: 30px;
   width: 30px;
   background-repeat: round;
-  background-image: url("./img/soccer_ball.gif");
-  background-image: url("./img/volleyball.gif");
   background-image: url("./img/football.gif");
   //spin
   -moz-transform: scaleX(-1);
@@ -55,6 +52,10 @@ background-color: lightgreen;
         -ms-filter: "FlipH";
   //spin
   /*transition: */
+}
+
+.pause {
+  background-image: url("./img/football.jpg")t;
 }
 
 .wrapper {
@@ -111,15 +112,34 @@ background-color: lightgreen;
 .dev-icon {
   margin-top: 30px;
   margin-left: 80px;
+  margin-right: 39px;
   font-size: 60px !important;
   color: black;
 }
 
 .dev-icon:hover {
   color: white;
+  cursor: pointer;
 }
 
 .dev-container {
   display: flex;
   justify-content: center;
+}
+
+.sound-icon {
+  font-size: 60px;
+  content: url("./img/sound_off.png");
+}
+
+.sound-icon:hover {
+  color: white;
+}
+
+.hide-sound-icon {
+  visibility: hidden;
+}
+
+.placeholder {
+  width: 21px;
 }
